--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_slidable: ^3.1.1
   cupertino_icons: ^1.0.8
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
