--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.3
+  agora_rtc_engine: ^6.0.0
+  permission_handler: ^8.3.0
 
 dev_dependencies:
   flutter_test:
